# immich_group_rawjpeg

./: Cargo.toml
openapi_client/: Cargo.toml  README.md
openapi_client/.openapi-generator/: FILES
openapi_client/docs/: ActivitiesApi.md  ActivityResponseDto.md  AlbumStatisticsResponseDto.md  AlbumsApi.md  ApiKeyCreateDto.md  ApiKeyResponseDto.md  ApiKeysApi.md  AssetBulkUpdateDto.md  AssetResponseDto.md  AssetStackResponseDto.md  AssetsApi.md  AuditApi.md  AuthenticationApi.md  DeprecatedApi.md  DownloadApi.md  DownloadResponse.md  DownloadUpdate.md  DuplicatesApi.md  ExifResponseDto.md  FacesApi.md  FileReportsApi.md  FoldersResponse.md  FoldersUpdate.md  JobsApi.md  LibrariesApi.md  LicenseKeyDto.md  LicenseResponseDto.md  MapApi.md  MapReverseGeocodeResponseDto.md  MemoriesApi.md  MemoriesResponse.md  MemoriesUpdate.md  MemoryResponseDto.md  NotificationsApi.md  OAuthApi.md  PartnerDirection.md  PartnersApi.md  PeopleApi.md  PeopleResponse.md  PeopleResponseDto.md  (+42 more)
openapi_client/src/: lib.rs
openapi_client/src/apis/: activities_api.rs  albums_api.rs  api_keys_api.rs  assets_api.rs  audit_api.rs  authentication_api.rs  configuration.rs  deprecated_api.rs  download_api.rs  duplicates_api.rs  faces_api.rs  file_reports_api.rs  jobs_api.rs  libraries_api.rs  map_api.rs  memories_api.rs  mod.rs  notifications_api.rs  o_auth_api.rs  partners_api.rs  people_api.rs  search_api.rs  server_api.rs  server_info_api.rs  sessions_api.rs  shared_links_api.rs  stacks_api.rs  sync_api.rs  system_config_api.rs  system_metadata_api.rs  tags_api.rs  timeline_api.rs  (+4 more)
src/: main.rs
(+227 files in other folders)
