[package]
name = "immich_group_rawjpeg"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
openapi = { path = "openapi_client" }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
uuid = "1.10.0"
indicatif = "0.17.8"
chrono = "0.4.38"
futures = "0.3.30"
serde = "1.0.204"
serde_json = "1.0.122"
itertools = "0.13.0"
utoipa = "4.2.3"
