[package]
name = "immich_group_rawjpeg"
version = "0.1.0"
edition = "2021"

[dependencies]
openapi = { path = "openapi_client" }

clap = "4.5.13"
futures = "0.3.30"
indicatif = "0.17.8"
itertools = "0.13.0"
leptos = { version = "0.6.13", features = ["csr", "nightly", "tracing"] }
serde = "1.0.204"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.10.0"
thaw = { version = "0.3.3", features = ["csr"] }
